tidy up and finish timeout work

--- a/docker/Dockerfile.gateway
+++ b/docker/Dockerfile.gateway
@@ -20,6 +20,25 @@ RUN if [ "$(uname -m)" = "x86_64" ]; then \
     apt-get install -y /tmp/cuno_1.2.6_amd64_glibc.deb && rm /tmp/cuno_1.2.6_amd64_glibc.deb; \
     fi
 
+# skopeo
+# ========================
+FROM golang AS skopeo
+
+WORKDIR /workspace
+
+ENV CGO_ENABLED="0"  \
+    DISABLE_DOCS="1" \
+    GO_DYN_FLAGS=""  \
+    BUILDTAGS="containers_image_openpgp"
+
+RUN <<EOT
+set -eux
+git clone https://github.com/containers/skopeo.git .
+make
+make install
+/usr/local/bin/skopeo --version
+EOT
+
 # Target used in development environments
 FROM base AS build
 
@@ -31,6 +50,8 @@ RUN apt-get install -y libfuse3-dev libbtrfs-dev libgpgme-dev && \
 COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
+COPY --from=skopeo /usr/local/bin/skopeo /usr/local/bin/skopeo
+COPY --from=skopeo /workspace/default-policy.json /etc/containers/policy.json
 COPY . .
 
 RUN go build -o /usr/local/bin/gateway /workspace/cmd/gateway/main.go
@@ -44,5 +65,9 @@ WORKDIR /workspace
 RUN apt-get autoclean
 
 COPY --from=build /usr/local/bin/gateway /usr/local/bin/
+COPY --from=skopeo /usr/local/bin/skopeo /usr/local/bin/skopeo
+COPY --from=skopeo /workspace/default-policy.json /etc/containers/policy.json
+RUN /usr/local/bin/skopeo --version
+
 
 CMD ["tail", "-f", "/dev/null"]
