--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -65,6 +65,10 @@ fileService:
   region:
 imageService:
   localCacheEnabled: true
+  # 120 ns per byte is a rough estimate of the time it takes per byte to pull, unpack, and archive an image.
+  # In the worst case, we have seen 10gb images take 20 minutes. That is 1e+10 bytes taking 1200 seconds.
+  # That gives 1200 / 1e+10 = 120 ns per byte.
+  archiveNanosecondsPerByte: 120
   registryStore: local
   registryCredentialProvider: docker
   buildContainerPoolSelector: build
