--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -177,6 +177,7 @@ worker:
   terminationGracePeriod: 30
   addWorkerTimeout: 10m
   blobCacheEnabled: false
+  containerLogLinesPerHour: 6000
   criu:
     storage:
       mountPath: /data/checkpoints
