--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -192,13 +192,32 @@ worker:
         secretKey: test
         endpointURL: http://localstack:4566
     cedana: # defaults
-      client:
-        leaveRunning: true
-      sharedStorage:
-        dumpStorageDir: /tmp/dump
+      # Can be unix, tcp, vsock
+      protocol: unix
+      address: /run/cedana.sock
+      log_level: debug
+      # Connection details to your cedana endpoint
       connection:
-        cedanaUrl:
-        cedanaAuthToken:
+        url: ""
+        auth_token: ""
+      checkpoint:
+        # Default dir to write/stream checkpoints to
+        dir: /data/checkpoints
+        # Can be one of: none, tar, lz4, gzip, zlib
+        compression: lz4
+        # Parallelism for streaming checkpoints
+        # TODO: usable only in next release
+        # stream: 4
+      db:
+        # Use remote DB on the cedana endpoint
+        remote: true
+      profiling:
+        # Receive profiling info in the gRPC trailer
+        enabled: false
+        precision: auto
+      criu:
+        # Keep the job running after checkpoint
+        leave_running: true
 
 providers:
   ec2:
