--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -205,7 +205,7 @@ worker:
         dir: /data/checkpoints
         # Can be one of: none, tar, lz4, gzip, zlib
         compression: lz4
-        # Number of parallel streams for streaming checkpoints
+        # Number of parallel streams for streaming checkpoints (0 = off)
         # TODO: usable only in next release
         # stream: 4
       db:
