feat: update local setup
- setup.sh - update binary versions
- setup.sh - pin kubectl version to stable 1.29
- setup.sh - fail on any error
- setup.sh - improve log statements
- k3d.yaml - use k3s being used in production
- manifests/k3d - remove nvidia device plugin, its already in kustomize. addresses user reported issue.
- manifests/overlays/cluster-dev - remove resources from beta9-gateway deployment. addresses user reported issue.
- manifests/overlays/remote-node-aws - not needed
- manifests/overlays/remote-node-crusoe - not needed

Resolve BE-2308

--- a/manifests/kustomize/overlays/cluster-dev/kustomization.yaml
+++ b/manifests/kustomize/overlays/cluster-dev/kustomization.yaml
@@ -12,6 +12,13 @@ components:
 - ../../components/localstack
 - ../../components/beta9-gateway
 patches:
+# Remove resources from beta9 components
+- target:
+    kind: Deployment
+    name: beta9-gateway
+  patch: |-
+    - op: remove
+      path: /spec/template/spec/containers/0/resources
 # Remove resources from monitoring components
 - target:
     kind: StatefulSet
