--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -183,6 +183,11 @@ worker:
   addWorkerTimeout: 10m
   blobCacheEnabled: false
   containerLogLinesPerHour: 6000
+  failover:
+    enabled: true
+    maxPendingWorkers: 10
+    maxSchedulingLatencyMs: 300000 # 5 minutes
+    minMachinesAvailable: 1 # minMachinesAvailable only applies to external pools
   criu:
     storage:
       mountPath: /data/checkpoints
