Upgrade to 12.4 and include enc/dec libs (#935)

--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -94,7 +94,7 @@ RUN go build -o /usr/local/bin/worker ./cmd/worker/main.go
 
 # final image
 # ========================
-FROM nvidia/cuda:12.3.1-base-ubuntu22.04 AS release
+FROM nvidia/cuda:12.4.1-base-ubuntu22.04 AS release
 FROM release AS dev
 
 FROM ${BASE_STAGE} AS final
@@ -112,7 +112,7 @@ RUN apt-get update && \
 RUN curl -L https://beam-runner-python-deps.s3.amazonaws.com/juicefs -o /usr/local/bin/juicefs && chmod +x /usr/local/bin/juicefs
 RUN curl -fsSL https://tailscale.com/install.sh | sh
 RUN apt-get install -y --no-install-recommends nvidia-container-toolkit-base nvidia-container-toolkit
-
+RUN apt-get install -y cuda-nvcc-12-4=12.4.99-1 cuda-nvvm-12-4=12.4.99-1 cuda-crt-12-4=12.4.99-1 libnvidia-encode-550=550.90.12-0ubuntu1 libnvidia-decode-550=550.90.12-0ubuntu1 libnvidia-compute-550=550.90.12-0ubuntu1
 RUN apt-get update && apt-get install -y fuse3 libfuse2 libfuse3-dev libfuse-dev bash-completion
 
 RUN apt-get install -y libbtrfs-dev libgpgme11-dev
@@ -190,5 +190,6 @@ COPY --from=buildah /usr/local/bin/buildah /usr/local/bin/buildah
 VOLUME "/usr/lib/x86_64-linux-gnu"
 VOLUME "/usr/lib/aarch64-linux-gnu"
 
+ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility,graphics,ngx,video
 ENV _BUILDAH_STARTED_IN_USERNS="" \
     BUILDAH_ISOLATION=chroot
