--- a/.github/workflows/dispatch-worker-build.yml
+++ b/.github/workflows/dispatch-worker-build.yml
@@ -7,8 +7,13 @@ on:
         description: 'image tag'
         required: true
         type: string
-      build_args:
-        description: 'Optional build arguments (format: KEY1=VALUE1,KEY2=VALUE2)'
+      cedana_url:
+        description: 'Cedana Base URL'
+        required: false
+        type: string
+        default: 'https://beam.cedana.ai/v1'
+      cedana_token:
+        description: 'Cedana Auth Token'
         required: false
         type: string
 
@@ -50,4 +55,6 @@ jobs:
             ${{ steps.login-ecr.outputs.registry }}/n4e0e1y0/beta9-worker:${{ inputs.tag }}
           target: final
           platforms: linux/amd64
-          build-args: ${{ inputs.build_args }}
+          build-args: |
+            CEDANA_BASE_URL=${{ inputs.cedana_url }}
+            CEDANA_TOKEN=${{ inputs.cedana_token }}
