--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -36,7 +36,7 @@ RUN apt-get install -y libseccomp-dev
 
 RUN <<EOT
 set -eux
-git clone https://github.com/beam-cloud/runc.git .
+git clone --branch v1.2.4 --depth 1 https://github.com/opencontainers/runc.git .
 make
 make install
 /usr/local/sbin/runc --version
@@ -124,10 +124,27 @@ RUN curl -L https://raw.githubusercontent.com/containers/shortnames/refs/heads/m
 RUN <<EOT
 set -eux
 if [ "$(uname -m)" = "x86_64" ]; then
-    apt-get install -y python3-protobuf libnet1 libnftables1 libnl-3-200 libprotobuf-c1 iptables
-    curl -L -o criu.deb https://download.opensuse.org/repositories/devel:/tools:/criu/xUbuntu_22.04/amd64/criu_4.0-3_amd64.deb
-    dpkg -i criu.deb
-    rm criu.deb
+    apt-get update && apt-get install -y \
+        python3-protobuf \
+        libbsd-dev \
+        libdrm-dev \
+        libnet1-dev \
+        libnl-3-dev \
+        libcap-dev \
+        uuid-dev \
+        gnutls-dev \
+        libnftables-dev \
+        pkg-config \
+        protobuf-c-compiler \
+        protobuf-compiler \
+        libprotobuf-c-dev \
+        git
+    git clone https://github.com/checkpoint-restore/criu.git
+    cd criu
+    make install-lib install-criu install-compel install-amdgpu_plugin install-cuda_plugin PREFIX=/usr SKIP_PIP_INSTALL=1
+    criu --version
+    stat /usr/lib/criu/cuda_plugin.so 
+    cd .. && rm -rf criu
 fi
 EOT
 
