--- a/pkg/worker/base_runc_config.json
+++ b/pkg/worker/base_runc_config.json
@@ -12,8 +12,8 @@
 			"/dev/null"
 		],
 		"env": [
-			"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:$PATH",
-			"LD_LIBRARY_PATH=/usr/local/nvidia/lib64:/usr/lib/x86_64-linux-gnu:/usr/lib/worker/x86_64-linux-gnu:$LD_LIBRARY_PATH",
+			"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
+			"LD_LIBRARY_PATH=/usr/local/nvidia/lib64:/usr/lib/x86_64-linux-gnu:/usr/lib/worker/x86_64-linux-gnu",
 			"TERM=xterm",
 			"LAMBDA_TASK_ROOT=/workspace",
 			"MAMBA_ROOT_PREFIX=/micromamba"
@@ -424,17 +424,7 @@
 			]
 		}
 	],
-	"hooks": {
-		"prestart": [
-			{
-				"path": "/usr/bin/nvidia-container-runtime-hook",
-				"args": [
-					"/usr/bin/nvidia-container-runtime-hook",
-					"-ociconfig"
-				]
-			}
-		]
-	},
+	"hooks": {},
 	"linux": {
 		"resources": {
 			"devices": [
