feat: cleanup workers in external pools
- Cleanup workers on external worker pools
- Delete k8s worker jobs when worker state no longer exists
- Rename worker cleanup config keys
- Move cleanup interval to config

Resolve BE-2343

--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -180,7 +180,8 @@ worker:
   defaultWorkerCPURequest: 2000
   defaultWorkerMemoryRequest: 1024
   terminationGracePeriod: 30
-  addWorkerTimeout: 10m
+  cleanupWorkerInterval: 1m
+  cleanupPendingWorkerAgeLimit: 10m
   blobCacheEnabled: false
   containerLogLinesPerHour: 6000
   failover:
