--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -113,7 +113,6 @@ RUN apt-get update && \
 RUN curl -L https://beam-runner-python-deps.s3.amazonaws.com/juicefs -o /usr/local/bin/juicefs && chmod +x /usr/local/bin/juicefs
 RUN curl -fsSL https://tailscale.com/install.sh | sh
 RUN apt-get install -y --no-install-recommends nvidia-container-toolkit-base nvidia-container-toolkit
-RUN apt-get install -y cuda-nvcc-12-4=12.4.99-1 cuda-nvvm-12-4=12.4.99-1 cuda-crt-12-4=12.4.99-1 libnvidia-encode-550=550.90.12-0ubuntu1 libnvidia-decode-550=550.90.12-0ubuntu1 libnvidia-compute-550=550.90.12-0ubuntu1
 RUN apt-get update && apt-get install -y fuse3 libfuse2 libfuse3-dev libfuse-dev bash-completion
 
 RUN apt-get install -y libbtrfs-dev libgpgme11-dev
@@ -198,6 +197,10 @@ COPY --from=buildah /usr/local/bin/buildah /usr/local/bin/buildah
 
 VOLUME "/usr/lib/x86_64-linux-gnu"
 VOLUME "/usr/lib/aarch64-linux-gnu"
+
+RUN touch /etc/criu/default.conf
+# add the following options to the default.conf file on new lines
+RUN echo -e "mntns-compat-mode\nv4\ndisplay-stats" >> /etc/criu/default.conf
 
 ENV NVIDIA_DRIVER_CAPABILITIES=compute,utility,graphics,ngx,video
 ENV _BUILDAH_STARTED_IN_USERNS="" \
