--- a/docker/Dockerfile.k3d
+++ b/docker/Dockerfile.k3d
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1.6
-FROM rancher/k3s:v1.28.5-k3s1 AS k3s
-FROM nvidia/cuda:12.3.1-base-ubuntu20.04
+FROM rancher/k3s:v1.31.5-k3s1 AS k3s
+FROM nvidia/cuda:12.8.0-base-ubuntu22.04
 
 ENV CRI_CONFIG_FILE=/var/lib/rancher/k3s/agent/etc/crictl.yaml
 ENV PATH="$PATH:/bin/aux"
@@ -10,12 +10,17 @@ set -eu
 echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
 apt-get update
 apt-get -y install gnupg2 curl
-curl -sL https://nvidia.github.io/nvidia-container-runtime/gpgkey | apt-key add -
-curl -sL https://nvidia.github.io/nvidia-container-runtime/ubuntu20.04/nvidia-container-runtime.list | tee /etc/apt/sources.list.d/nvidia-container-runtime.list
+
+curl -fsSL https://nvidia.github.io/libnvidia-container/gpgkey | gpg --dearmor -o /usr/share/keyrings/nvidia-container-toolkit-keyring.gpg 
+curl -s -L https://nvidia.github.io/libnvidia-container/stable/deb/nvidia-container-toolkit.list | 
+sed 's#deb https://#deb [signed-by=/usr/share/keyrings/nvidia-container-toolkit-keyring.gpg] https://#g' | tee /etc/apt/sources.list.d/nvidia-container-toolkit.list
 apt-get update
 apt-get -y install nvidia-container-toolkit-base nvidia-container-toolkit nvidia-container-runtime util-linux
 
+nvidia-ctk runtime configure --runtime=containerd
+
 mkdir -vp /etc && echo 'hosts: files dns' > /etc/nsswitch.conf
+mkdir -p /etc/docker
 chmod 1777 /tmp
 mkdir -vp /var/lib/rancher/k3s/agent/etc/containerd/
 
