--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -33,7 +33,7 @@ storage:
     bufferSize: 300
 gateway:
   host: beta9-gateway
-  invokeURLType: path
+  invokeURLType: host
   grpc:
     externalHost: beta9-gateway
     externalPort: 1993
