swap out cuno for geese

--- a/docker/Dockerfile.gateway
+++ b/docker/Dockerfile.gateway
@@ -16,8 +16,11 @@ RUN apt-get install -y libfuse2 libfuse-dev bash-completion && \
     rm -vf mountpoint.deb
 
 RUN if [ "$(uname -m)" = "x86_64" ]; then \
-    curl -L https://beam-runner-python-deps.s3.amazonaws.com/cuno_1.2.6_amd64_glibc.deb -o /tmp/cuno_1.2.6_amd64_glibc.deb && \
-    apt-get install -y /tmp/cuno_1.2.6_amd64_glibc.deb && rm /tmp/cuno_1.2.6_amd64_glibc.deb; \
+    curl -L https://github.com/yandex-cloud/geesefs/releases/download/v0.42.4/geesefs-linux-amd64 -o /usr/local/bin/geesefs && \
+    chmod +x /usr/local/bin/geesefs; \
+    elif [ "$(uname -m)" = "aarch64" ]; then \
+    curl -L https://github.com/yandex-cloud/geesefs/releases/download/v0.42.4/geesefs-linux-amd64 -o /usr/local/bin/geesefs && \
+    chmod +x /usr/local/bin/geesefs; \
     fi
 
 # skopeo
