--- a/manifests/k3d/localstack.yaml
+++ b/manifests/k3d/localstack.yaml
@@ -17,6 +17,7 @@ spec:
       #!/bin/bash
       awslocal s3 mb s3://juicefs
       awslocal s3 mb s3://logs
+      awslocal s3 mb s3://beta9-images
     persistence:
       enabled: true
       storageClass: local-path
