fix: reduce docker rate limit impact

--- a/deploy/charts/beta9/values.yaml
+++ b/deploy/charts/beta9/values.yaml
@@ -34,7 +34,7 @@ controllers:
       wait-on-backends:
         image:
           repository: busybox
-          tag: latest
+          tag: 1.37.0
         command:
         - sh
         - -c
