--- a/manifests/kustomize/components/beta9-gateway/deployment.yaml
+++ b/manifests/kustomize/components/beta9-gateway/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       terminationGracePeriodSeconds: 185
       initContainers:
       - name: wait-on-backends
-        image: busybox
+        image: busybox:1.37.0
         command:
         - sh
         - -c
