feat: use default docker creds if they are configured
Resolve BE-2430

--- a/pkg/common/config.default.yaml
+++ b/pkg/common/config.default.yaml
@@ -75,7 +75,7 @@ imageService:
   pythonVersion: python3.10
   registries:
     docker:
-      username: beamcloud
+      username:
       password:
     s3:
       bucketName: beta9-images
